# etracer

./: .codecov.yml  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Makefile  README.md  examples.py  mypy.ini  pyproject.toml  requirements.txt  test_tracer.py  tracer.py  tracer_tests.py  type.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_request.md  feature_request.md
.github/workflows/: docs.yml  pr-checks.yml  pr.yml  pypi-release.yml  testpypi.yml
docs/: advanced.rst  api.rst  conf.py  contributing.rst  deployment.rst  index.rst  installation.rst  release-process.md  usage.rst
src/etracer/: __init__.py  interfaces.py  models.py  tracer.py
src/etracer/utils/: __init__.py  ai_client.py  cache.py  printer.py  spinner.py  timer.py
tests/: __init__.py  mocks.py  test_ai_client.py  test_cache.py  test_spinner.py  test_tracer.py
